# retro-sound

./: CMakeLists.txt  CNAME  README.md
hardware/: XT_Sound_PI2040Zero.kicad_pcb  XT_Sound_PI2040Zero.kicad_prl  XT_Sound_PI2040Zero.kicad_pro  XT_Sound_PI2040Zero.kicad_sch  XT_Sound_PI2040Zero_bottom.kicad_pcb  XT_Sound_PI2040Zero_bottom.kicad_pro  XT_Sound_PI2040Zero_bottom.kicad_sch  fp-info-cache  fp-lib-table
hardware/DOSmusicZERO.pretty/: LOGO.kicad_mod  LOGO1.kicad_mod  LOGO2.kicad_mod  LOGO3.kicad_mod
hardware/bom/: ibom.html
src/: 74hc595.h  fifo.h  main.cpp  pio_clock_generator.h  title.h  tusb_config.h  usb-descriptors.c  usb-serial.c  usb-serial.h  ws2812b.h
src/74hc595/: 74hc595.c  74hc595.h  AY_PIO_595.c  AY_PIO_595.h
src/emulators/: opl.c  opl.h  sn76489.c  ym2413.c  ym2413.h  ym2612.c
